<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bebas"
        android:text="@string/no_data"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/update"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="6dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/refresh_button" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/bebas"
        android:text="@string/feels_like_0_c"
        android:gravity="start"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />


    <ImageView
        android:layout_marginStart="10dp"
        android:id="@+id/widgetIcon"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/sun"
        android:layout_height="120dp"
        android:contentDescription="@string/weather_icon"
        android:layout_marginEnd="10dp"
        android:layout_width="120dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="100sp"
        android:id="@+id/currentTemperature"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:fontFamily="@font/bebas"
        android:text="@string/_0_c"
        tools:ignore="RelativeOverlap" />
    <ImageView
        android:layout_marginStart="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="41dp"
        android:src="@drawable/humidity"
        android:layout_height="18dp"
        android:contentDescription="@string/humidity"
        android:layout_width="18dp"
        />
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/_0"
        android:gravity="end"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="@font/bebas"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="115dp"
        android:text="@string/_0km_h"
        android:gravity="end"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="@font/bebas"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:layout_marginStart="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/breeze"
        android:layout_height="18dp"
        android:contentDescription="@string/windspeed"
        android:layout_width="18dp"
        />
    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:layout_marginTop="180dp"

        android:textStyle="bold"
        android:fontFamily="@font/bebas"
        android:text="@string/no_data"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/updatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:gravity="end"
        android:textStyle="bold"
        android:fontFamily="@font/bebas"
        android:text="@string/last_update"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>